istio/k8s_manifests/hello_world_deployment_istio_ingress/2-deplyoment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2
  namespace: learning
  labels:
    app: helloworld
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
      version: v2
  template:
    metadata:
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
      - name: helloworld
        image: docker.io/istio/examples-helloworld-v2:1.0
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
